[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/frames/coin_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/frames/chest_full_open_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/frames/chest_full_open_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/frames/chest_full_open_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/TreasuryRoomEndGame.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 2.0
} ]

[node name="TreasuryRoomEndGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="BackgroundPanel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 181.0
custom_styles/panel = SubResource( 1 )

[node name="LabelTitle" type="Label" parent="."]
margin_left = 43.0
margin_top = 27.0
margin_right = 280.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "Collect your inheritance"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 112, 88 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "run"
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 148, 76 )
texture = ExtResource( 2 )

[node name="LabelCoinsCollected" type="Label" parent="."]
margin_left = 160.0
margin_top = 72.0
margin_right = 200.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 32, 40 )
text = "0"

[node name="StartButton" type="Button" parent="."]
modulate = Color( 0, 1, 0.694118, 1 )
margin_left = 104.0
margin_top = 136.0
margin_right = 210.0
margin_bottom = 160.0
text = "Begin a new Journey"

[node name="LabelCharName" type="Label" parent="."]
margin_left = 40.0
margin_top = 19.0
margin_right = 288.0
margin_bottom = 29.0
text = "Sir Whatever Itsname"
align = 1

[node name="LabelDinasty" type="Label" parent="."]
margin_left = 144.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 119.0
text = "Took you 1 dinasty to achieve victory"
autowrap = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
